# rs_seg_methods

./: .gitignore  README.md  Untitled-1.csv
analytical/: CMakeLists.txt  package.xml
analytical/arvc_utils/: .gitignore  CMakeLists.txt  package.xml
analytical/arvc_utils/include/arvc_utils/: axes3d.hpp  color.hpp  common.hpp  console.hpp  csv.hpp  metrics.hpp  plane.hpp  pose.hpp  timer.hpp  transforms.hpp  utils.hpp.bak  utils.hpp.na  utils_legacy.hpp.na  viewer.hpp
analytical/arvc_utils/src/: axes3d.cpp  color.cpp  console.cpp  metrics.cpp  plane.cpp  pose.cpp  timer.cpp  transforms.cpp  utils.cpp.bak  viewer.cpp
analytical/config/: config.yaml
analytical/include/: custom_logger.hpp  utils.hpp
analytical/include/analytical_rs_seg/: ground_filter.hpp
analytical/include/arvc_ground_filter/: ground_filter.hpp
analytical/results/: test.csv
analytical/src/: experiment_queue.cpp  ground_filter.cpp  node.cpp
analytical/src/utils/: experiment_queue.cpp  experiment_queue_v2.cpp
analytical_rs_seg/: CMakeLists.txt  package.xml
analytical_rs_seg/config/: config.yaml
analytical_rs_seg/include/: console.hpp  csv_utils.hpp  metrics.hpp  tqdm.hpp  utils.hpp
analytical_rs_seg/include/analytical_rs_seg/: ground_filter.hpp
analytical_rs_seg/src/: experiment_queue_v2.cpp  find_method_differences_in_clouds.cpp  ground_filter.cpp  node.cpp
deep_learning/: requirements.txt
deep_learning/config/: test.yaml  train.yaml
deep_learning/engines/dataset/: base.py  check_dataset.py  pointcept_dataset.py
deep_learning/engines/losses/: bce_lovasz.py
deep_learning/engines/trainers/: mkTrainer.py  pn2Trainer.py  pnTrainer.py  ptV3Trainer (NOT WORKING).py  tester.py  trainer.py
deep_learning/engines/utils/: console.py  csv_parser.py  graphics_plotter.py  metrics.py  utils.py
deep_learning/experiments/: test (Copy).csv  test.csv  test.csv.bak  test.xlsx  test_nov_2025.csv  train.csv
deep_learning/experiments/images/: efficiency_kde_plot.eps  efficiency_kde_plot.png.eps  efficiency_scatter_plot.png.eps  feat_vs_metric_roc_pr_crossed.eps  feat_vs_metric_roc_pr_orto.eps  inference_efficiency.eps  threshold_estimator.png.eps  train_efficiency.eps  voxel_analysis.eps  voxel_analysis.png.eps
deep_learning/models/: __init__.py  minkunet.py  pointTransfomerV3.py  pointnet.py  pointnet2.py  ptV3_0.py
deep_learning/repos/Pointcept/configs/retTruss/: semseg-pt-v3m1-0-base.py
deep_learning/repos/Pointcept/pointcept/datasets/: __init__.py  retTruss.py
deep_learning/repos/Pointcept/pointcept/engines/: test.py
deep_learning/repos/Pointcept/pointcept/utils/: config.py
deep_learning/repos/Pointcept/scripts/: arvc_test_c.py  arvc_test_nxnynz.py  arvc_test_xyz.py  arvc_test_xyzc.py  arvc_test_xyznxnynz.py
deep_learning/repos/Pointcept/tools/: test_retTruss.py  train_retTruss.py  visualize_test.py
deep_learning/scripts/: main.py  test.py  train.py
deep_learning/scripts/utils/: _check_empty_test.py  _check_test_full.py  _compute_best_threshold.py  _generate_plot.py  _optimize_batchsize_and_workers.py  create_queue.py  pn2_run_queue.py  pn_run_queue.py  ptv3_run_queue.py  run_queue.py  test_df_manager.py  test_queue.py
deep_learning/tests/: metrics_parser.py
deep_learning/tests/MinkUNet34C/: exp_list.csv.bak
deep_learning/visualization/: clouds_map.yaml  inference.py  save_ptv3_as_ply.py
gazebo_generator_plugin/: CMakeLists.txt  package.xml
gazebo_generator_plugin/config/: test_generator.yaml  train_generator.yaml
gazebo_generator_plugin/include/: console_utils.hpp  sdf_utils.hpp  test_utils.hpp  timer_utils.hpp  train_utils.hpp  yaml_conversions.hpp
gazebo_generator_plugin/include/gazebo_generator_plugin/: gazebo_test_generator_plugin.hpp  gazebo_train_generator_plugin.hpp
gazebo_generator_plugin/launch/: example_train.launch
gazebo_generator_plugin/src/: gazebo_test_generator_plugin.cpp  gazebo_train_generator_plugin.cpp
gazebo_generator_plugin/worlds/: example_test.world  example_train.world
truss_generator/: CMakeLists.txt  package.xml
truss_generator/config/: config.yaml
truss_generator/include/: arvc_console.hpp  arvc_sdf.hpp
truss_generator/models/BASE_MODELS/TEMPLATE/: model.config  model.sdf
truss_generator/models/BASE_MODELS/TEMPLATE/materials/scripts/: metal.material
truss_generator/models/BASE_MODELS/box/: model.config  model.sdf
truss_generator/models/BASE_MODELS/simple_block_v2/: model.sdf  temp_model.config
truss_generator/models/BASE_MODELS/simple_block_v2_textured/: model.sdf
truss_generator/models/BASE_MODELS/simple_block_v2_textured/materials/scripts/: metal.material
truss_generator/models/BASE_MODELS/simple_block_v2_textured_unlabel/: model.config  model.sdf
truss_generator/models/BASE_MODELS/simple_block_v2_unlabel/: model.config  model.sdf
truss_generator/models/BASE_MODELS/simple_block_v2_unlabel_grey/: model.config  model.sdf
truss_generator/models/BASE_MODELS/simple_parallelogram/: model.config  model.sdf
truss_generator/models/BASE_MODELS/simple_parallelogram_textured/: model.config  model.sdf
truss_generator/models/BASE_MODELS/simple_parallelogram_textured/materials/scripts/: metal.material
truss_generator/models/BASE_MODELS/simple_parallelogram_textured_unlabel/: model.config  model.sdf
truss_generator/models/BASE_MODELS/simple_parallelogram_unlabel/: model.config  model.sdf
truss_generator/src/: build_truss.cpp
